<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Android Services Library</string>
    <string name="permlab_accessAdServicesTopics">access AdServices Topics API</string>
    <string name="permdesc_accessAdServicesTopics">Allows an application to access AdServices Topics API.</string>
    <string name="permlab_accessAdServicesAttribution">access AdServices Attribution APIs</string>
    <string name="permdesc_accessAdServicesAttribution">Allows an application to access AdServices Attribution APIs.</string>
    <string name="permlab_accessAdServicesCustomAudience">access AdServices Custom Audience API</string>
    <string name="permdesc_accessAdServicesCustomAudience">Allows an application to access AdServices Custom Audience API.</string>
    <string name="permlab_accessAdServicesAdId">Access to AdId API</string>
    <string name="permdesc_accessAdServicesAdId">Allows an application to access AdId API.</string>
    <string name="permlab_accessAdServicesConsent">access AdServices Consent API</string>
    <string name="permdesc_accessAdServicesConsent">Allows an application to access AdServices Consent API.</string>
    <string name="permlab_adServicesAccessAdId">Access to Ad ID API</string>
    <string name="permdesc_adServicesAccessAdId">Allows an application to access Ad ID API.</string>
    <string name="permlab_adServicesAccessAdServicesCobaltUpload">Access to AdServices Cobalt Upload API</string>
    <string name="permdesc_adServicesAccessAdServicesCobaltUpload">Allows an application to access AdServices Cobalt Upload API.</string>
    <string name="permlab_adServicesAccessAppSetId">Access to App Set ID API</string>
    <string name="permdesc_adServicesAccessAppSetId">Allows an application to access App Set ID API.</string>
    <string name="permlab_adServicesAccessConsentService">Access to Consent Service API</string>
    <string name="permdesc_adServicesAccessConsentService">Allows an application to access Consent Service API.</string>
    <string name="permlab_modifyAdServicesState">Access to AdService’s enablement state modification API</string>
    <string name="permdesc_modifyAdServicesState">Allows an application to access AdService’s enablement state modification API.</string>
    <string name="permlab_accessAdServicesState">Access to AdService’s enablement state API</string>
    <string name="permdesc_accessAdServicesState">Allows an application to access AdService’s enablement state API.</string>
    <string name="permlab_accessAdServicesManager">Access to AdServicesManager’s APIs</string>
    <string name="permdesc_accessAdServicesManager">Allows an application to access AdServicesManager’s APIs.</string>
    <string name="permlab_updateAdservicesAdId">Access to AdService’s update AdId API.</string>
    <string name="permdesc_updateAdservicesAdId">Allows an application to access AdService’s update AdId API.</string>
    <string name="app_label">Ad Privacy</string>
    <string name="notificationUI_notification_title_eu">Join Android’s ads privacy beta</string>
    <string name="notificationUI_notification_content_eu">Android is exploring more private ways for apps to show you ads</string>
    <string name="notificationUI_notification_cta_eu">Learn more</string>
    <string name="notificationUI_header_title_eu">Android’s ads privacy beta</string>
    <string name="notificationUI_container1_title_eu">What’s new</string>
    <string name="notificationUI_container1_body_text_eu">The new privacy features in the Privacy Sandbox let apps show you relevant ads, but restrict what those apps can learn about your activities on websites and apps from other developers.</string>
    <string name="notificationUI_container1_control_text_eu">How it works</string>
    <string name="notificationUI_container2_title_eu">How to participate</string>
    <string name="notificationUI_container2_body_text_eu">Turning on the beta allows apps to test these new, more private ways to show you ads. You can turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_left_control_button_text_eu">No thanks</string>
    <string name="notificationUI_right_control_button_text_eu">Turn On</string>
    <string name="notificationUI_more_button_text">More</string>
    <string name="notificationUI_confirmation_accept_title">Thank you for participating</string>
    <string name="notificationUI_confirmation_accept_subtitle">You’re part of Android’s ads privacy beta. The Privacy Sandbox is turned on for your device.\n\nYou can learn more or turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_confirmation_decline_title">You’ve chosen not to participate</string>
    <string name="notificationUI_confirmation_decline_subtitle">Thanks for your response. The Privacy Sandbox is turned off for your device.\n\nIf you change your mind or want to learn more, go to your privacy settings.</string>
    <string name="notificationUI_confirmation_left_control_button_text">Privacy settings</string>
    <string name="notificationUI_confirmation_right_control_button_text">Got it</string>
    <string name="notificationUI_notification_title" translatable="false">@string/notificationUI_header_title_eu</string>
    <string name="notificationUI_notification_content" translatable="false">@string/notificationUI_notification_content_eu</string>
    <string name="notificationUI_notification_cta" translatable="false">@string/notificationUI_notification_cta_eu</string>
    <string name="notificationUI_header_title" translatable="false">@string/notificationUI_header_title_eu</string>
    <string name="notificationUI_container1_title" translatable="false">@string/notificationUI_container1_title_eu</string>
    <string name="notificationUI_container1_body_text" translatable="false">@string/notificationUI_container1_body_text_eu</string>
    <string name="notificationUI_container1_control_text" translatable="false">@string/notificationUI_container1_control_text_eu</string>
    <string name="notificationUI_container2_title">You’re part of the beta</string>
    <string name="notificationUI_container2_body_text">The Privacy Sandbox is on for your device, and apps can test these new, more private ways to show you ads. You can turn off the beta any time in your privacy settings.</string>
    <string name="notificationUI_left_control_button_text" translatable="false">@string/notificationUI_confirmation_left_control_button_text</string>
    <string name="notificationUI_right_control_button_text">Got it</string>
    <string name="notificationUI_how_it_works_expanded_text1">Android’s Privacy Sandbox provides new features that apps can use to show you ads you might like. These technologies don’t use device identifiers.\n\nAndroid and your apps can estimate the kinds of ads you might be interested in, and save the interests temporarily on your device. This allows apps to show you ads you might like, without tracking your activity across websites and apps from other developers.</string>
    <string name="notificationUI_how_it_works_expanded_text2">Ads personalization with Privacy Sandbox</string>
    <string name="notificationUI_how_it_works_expanded_text3">&#8226;&#160;&#160;Interests estimated by Android</string>
    <string name="notificationUI_how_it_works_expanded_text4">Android periodically estimates your top interests based on the apps you use, for example, \"Sports\" or \"Travel.\"\n\nLater, an app can ask Android to use those interests to show you more relevant ads.\n\nYou can see the list of current interests in your privacy settings, and block any you don’t like.</string>
    <string name="notificationUI_how_it_works_expanded_text5">&#8226;&#160;&#160;Interests estimated by apps</string>
    <string name="notificationUI_how_it_works_expanded_text6">Apps can estimate your interests and temporarily save these with Android. For example, an app you use to buy running shoes might estimate your interest as \"running marathons.\"\n\nLater, based on this interest, a different app can show you an ad related to marathons.\n\nIn your privacy settings, you can manage the list of apps that have saved interests.</string>
    <string name="notificationUI_notification_ga_title">New ad privacy features</string>
    <string name="notificationUI_notification_ga_content">Ad topics and new controls give you more choice over the ads you see</string>
    <string name="notificationUI_header_ga_title">New ads privacy features now available</string>
    <string name="notificationUI_container1_ga_introduction" translatable="false">@string/notificationUI_container1_body_ga_text_eu</string>
    <string name="notificationUI_container2_ga_introduction">Android notes topics of interest based on apps you’ve used recently. Also, apps you use can determine what you like. Later, apps can ask for this information to show you personalized ads. You can choose which topics and apps are used to show you ads.</string>
    <string name="notificationUI_container3_ga_introduction">To measure the performance of an ad, limited types of data are shared between apps.</string>
    <string name="notificationUI_ga_container1_control_text">More about ads on Android</string>
    <string name="notificationUI_how_it_works_row_subtitle1">More useful ads</string>
    <string name="notificationUI_how_it_works_row_body1">Apps can ask Android for information to help personalize the ads you see.</string>
    <string name="notificationUI_how_it_works_row_body2">&#8226;&#160;&#160;Android notes topics of interest based on the apps you’ve used recently.</string>
    <string name="notificationUI_how_it_works_row_body3">&#8226;&#160;&#160;Apps you use can also determine what you like based on how you use them. For example, if you use an app that sells long-distance running shoes, the app might decide that you’re interested in running marathons.</string>
    <string name="notificationUI_how_it_works_row_body4">Later, an app you use can ask for this information &#8212; either your ad topics or ads suggested by apps you’ve used.</string>
    <string name="notificationUI_how_it_works_row_body5">Android auto-deletes topics and app-suggested data regularly. You can also block specific topics and apps you don’t want to make suggestions.</string>
    <string name="notificationUI_how_it_works_subtitle2">Measuring how well an ad performs</string>
    <string name="notificationUI_u18_header_title" translatable="false">@string/notificationUI_u18_notification_title</string>
    <string name="notificationUI_u18_body1">We’re launching a new ad privacy feature called ad measurement. Android shares only very limited information between apps, such as when an ad was shown to you, to help apps measure the performance of ads.</string>
    <string name="notificationUI_u18_body2" translatable="false">@string/notificationUI_learn_more_from_privacy_policy</string>
    <string name="notificationUI_u18_body3">You can make changes in ad privacy settings.</string>
    <string name="notificationUI_u18_left_control_button_text" translatable="false">@string/notificationUI_confirmation_left_control_button_text</string>
    <string name="notificationUI_u18_right_control_button_text" translatable="false">@string/notificationUI_right_control_button_text</string>
    <string name="settingsUI_u18_measurement_view_title" translatable="false">@string/settingsUI_main_view_info_text8</string>
    <string name="settingsUI_u18_main_view_measurement_info">Apps you use can ask Android for information to help them measure the performance of their ads. Android lets apps collect only limited types of data.</string>
    <string name="ic_main_view_ga_image_description">Colorful illustration of a lock inside a circle</string>
</resources>